--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,17 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <title>Keeper App</title>
-      <link
-        href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-        rel="stylesheet"
-      />
-      <link rel="stylesheet" href="/styles.css" />
-    </head>
-    
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/index.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Keeper App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles.css" />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+  </head>
+  
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
+</body>
 </html>
-
